apps/base/cassandra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cassandra
  labels:
    ns: cassandra
