apps/base/cassandra/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: cassandra
  name: cassandra
spec:
  containers:
    - image: gcr.io/google-samples/cassandra:v13
      name: cassandra
      resources:
        limits:
          cpu: "500m"
          memory: 1Gi
        requests:
          cpu: "500m"
          memory: 1Gi
