apps/base/cassandra/allow-ingress-cassandra.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-cassandra
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: cassandra
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              ns: default
        - podSelector:
            matchLabels:
              role: backend
      ports:
        - protocol: TCP
          port: 80
